--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -2,9 +2,13 @@ name: 'Get & Cache Dependencies'
 description: 'Get the dependencies (via npm) and cache them.'
 inputs:
   caching:
-    discription: 'Whether you cache dependencies or not'
+    description: 'Whether you cache dependencies or not'
     required: false
     default: 'true'
+outputs:
+  used-cached:
+    description: 'Cached was used.'
+    value: ${{ steps.install.outputs.cache }}
 runs:
   using: 'composite'
   steps:
@@ -16,6 +20,9 @@ runs:
         path: node_modules
         key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
     - name: Install dependencies
+      id: install
       if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true'
-      run: npm ci
+      run: |
+        npm ci
+        echo "::set-output name=cache::'${{ inputs.caching }}'"
       shell: bash
