--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "02-basic-example",
+  "name": "github-custome-action",
   "private": true,
   "version": "0.0.0",
   "type": "module",
